[tool.poetry]
name = "cloudfront extensions ssl for saas"
version = "0.1.0"
description = ""
authors = ["csdc <csdc@amazon.com>"]
readme = "README.md"
packages = [{include = "../ssl_for_saas"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.8"
tenacity = "8.0.1"
aws-lambda-powertools = "^2.2.0"
cerberus = "^1.3.4"
requests = "^2.31.0"
requests-aws4auth = "^1.1.2"
aws-xray-sdk = "^2.11.0"
pytest = "^7.2.0"
moto = "^4.0.10"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
docker = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
